# quranic_reading

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: README.md  binary-encoder.md  cognitive-semantics.md  orchestrator.md  project_alpha_thinker.md  project_beta_thinker.md  project_delta_thinker.md  project_epsilon_thinker.md  project_gamma_thinker.md  research-agent.md  universal-bridge.md  validator.md
.claude/commands/: length-scale.md  register.md  status.md  test.md
Remembrance/: AXIOMS.md  CONCLUSIONS.md  DISCOVERIES.md  ESSENCE.md  FAILURES.md  HYPOTHESES.md  METHODOLOGY.md  QUESTIONS.md
data/: README.md
docs/: ARCHITECTURE.md  AXIOMS.md  FINDINGS.md  FINDING_muqattaat_sections.md  METHODOLOGY.md
experiments/MUQ-001/: README.md
experiments/ORD-001/: README.md
experiments/SEM-001/: DESIGN.md  README.md
experiments/SEM-002/: README.md
experiments/SEM-003/: README.md
experiments/SEM-004/: README.md
experiments/SEM-005/: README.md
experiments/STR-001/: README.md
output/: muqattaat_distinctive_themes.json  muqattaat_paper.html  structure_localization.json
src/: baseline.py  binary_encodings.py  controlled_analysis.py  deep_falsification.py  falsification_test.py  hypothesis_test.py  interpret_pattern.py  investigate_mod19.py  muqattaat_distinctive_themes.py  muqattaat_theme_analysis.py  pipeline.py  research_engine.py  research_log.py  research_loop.py  run_baseline_research.py  run_word_permutation_test.py  structure_localization.py  surah_analysis.py  verse_analysis.py  visualize_muqattaat.py
(+63 files in other folders)
